Updating the French documentation and improved the SetLibLang.sh script

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -91,7 +91,7 @@ Appelez ensuite la fonction \textbf{\color{mauve}ParseCSVLibLang}, en lui passan
 
 Pour plus de praticité, vous pouvez créer un fichier nommé \textbf{\color{lime}LangISOCode.conf} dans le dossier\linebreak \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main}, et écrire le code ISO 639-1 de votre langue,\linebreak suivie du code ISO 3166 d'un des pays où la langue à ajouter est parlée.\\[1\baselineskip]
 
-Pour encore plus de praticité, si votre pays et la langue que vous souhaitez ajouter sont définis\linebreak dans les paramètres de votre système d'exploitation, vous pouvez taper la commande suivante,\linebreak en remplaçant la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT} par le chemin de la racine du dossier de\linebreak configurations de Bash Utils (normalement localisé dans votre dossier personnel) :
+Pour encore plus de praticité, si la langue que vous souhaitez ajouter est définie dans les paramètres de votre système d'exploitation, vous pouvez taper la commande suivante,en remplaçant la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT} par le chemin de la racine du dossier de configurations de Bash Utils (normalement localisé dans votre dossier personnel) :
 \begin{itemize}
     \item \textbf{\color{gray}echo \color{orange}\$LANG \color{white} > "\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main/LangISOCode.conf\color{white}"}
 \end{itemize}
