--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -38,7 +38,11 @@
  \color{red}
  \section{Introduction}\color{white}
 
- \textbf{Note :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation\color{white}} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf\color{white}}.
+ \textbf{Note 1 :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation\color{white}} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf\color{white}}.\\[1\baselineskip]
+ 
+ 
+ \textbf{Note 2 :} La méthode de création de modules est détaillée dans la section \textbf{\color{red}Liste des tutoriels \color{white} / \color{green}Ajouter un nouveau module} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Tutos.pdf}.
+ 
 
  \color{green}
   \subsection{Présentation générale}\color{white}
