--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -232,7 +232,9 @@ Encore une fois, n'hésitez pas à jeter un œil à l'organisation des autres li
 \subsubsection{Consignes}\color{white}
 De manière automatique :
 \begin{itemize}
-    \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh} (vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier racine de la librairie (pour ceux qui\linebreak utilisent WSL, ce lien ne marche pas sur les explorateurs de fichiers sur Windows)), puis\linebreak exécutez juste ce script en lui passant en argument les noms des modules à créer.\\[1\baselineskip]
+    \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh}, puis exécutez juste ce script en lui passant en argument les noms des modules à créer.\\[1\baselineskip]
+    
+    \item \textbf{Astuce :} Vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier racine de la librairie. \textbf{Attention :} Pour ceux qui utilisent WSL, ce lien ne marche pas sur les explorateurs de fichiers sur Windows.\\[1\baselineskip]
 \end{itemize}
 
 De manière manuelle :
