Added functionality for simultaneous creation of modules to the mkmodules.sh script, and updated the French documentation

--- a/docs/fr/Tutos.tex
+++ b/docs/fr/Tutos.tex
@@ -234,7 +234,7 @@ De manière automatique :
 \begin{itemize}
     \item Rendez-vous EXACTEMENT dans le dossier du fichier shell \textbf{\color{lime}mkmodules.sh}, puis exécutez juste ce script en lui passant en argument les noms des modules à créer.\\[1\baselineskip]
     
-    \item \textbf{Astuce :} Vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier racine de la librairie. \textbf{Attention :} Pour ceux qui utilisent WSL, ce lien ne marche pas sur les explorateurs de fichiers sur Windows.\\[1\baselineskip]
+    \item \textbf{Astuce :} Vous pouvez vous y rendre directement via le lien symbolique \textbf{\color{lime}bin} dans le dossier\linebreak racine de la librairie. \textbf{Attention}, pour ceux qui utilisent WSL, ce lien ne marche pas dans le\linebreak moindre explorateur de fichiers sur Windows, mais uniquement en ligne de commande\linebreak avec votre distribution Linux.\\[1\baselineskip]
 \end{itemize}
 
 De manière manuelle :
